--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "clean": "node scripts/clean.js"
   },
   "bin": {
-    "qwen": "bundle/gemini.js"
+    "mistral": "bundle/gemini.js"
   },
   "files": [
     "bundle/",
